deployment/local/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wein-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - targetPort: 2020
      port: 8080
      nodePort: 30001
---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
  #name: link-app-network-policy
  #namespace: dev
#spec:
  #podSelector:
    #matchLabels:
      #app: backend
  #policyTypes:
    #- Ingress
    #- Egress
  #ingress:
    #- from:
      #- podSelector:
          #matchLabels:
            #app: db
      #ports:
        #- protocol: TCP
          #port: 3306
  #egress:
    #- to:
      #- podSelector:
          #matchLabels:
            #app: db
      #ports:
        #- protocol: TCP
          #port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wein-service-deployment
  namespace: dev
  labels:
    app: backend
spec:
  template:
    metadata:
      name: wein-service-pod
      namespace: dev
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 1909
      containers:
        - image: dja111/wein-service:latest
          name: wein-service
          ports:
            - containerPort: 2020
          resources:
            requests:
              memory: "256Mi"
              cpu: 0.5
            limits:
              memory: "512Mi"
              cpu: 1
                     
  replicas: 3
  selector:
    matchLabels:
      app: backend
  #strategy:
    #type: Recreate
