deployment/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wein-service-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /weins
          pathType: Prefix
          backend:
            service:
              name: wein-service
              port:
                number: 2020
